--- a/HomeStay/src/main/resources/application.properties
+++ b/HomeStay/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8866
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cbuc_homestay?useUnicode=true&characterEncoding=UTF8&useSSL=false&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.password=888888
 # Druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.initalSize=5
